- added max-width propertey back to index.css - Added max-height property to nav bar - Restrutured about me section; The aboutMeText is now next to aboutMeImg - Created id's and classes for the project section - Moved skill section into aboutMeContainer (will correct alignment in a later commit)

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: auto;
+  max-width: 90%;
 }
 
 code {
