--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,47 +1,63 @@
 #aboutMeContainer {
-    margin: 70px 0;
-    max-width: 100%;
-    min-width: 50%;
-    display: flex;
-    
-    #aboutMeDiv{
-        padding: 300px 0;
-        
-        #subHeading{
-            margin: 10px 10px;
-            text-align: center;
-            text-decoration: underline;
-            margin-right: 50px;
-        }
-        
-        #aboutMeText {
-            box-sizing: content-box;
-            max-width: 100%;
-            min-width: 50%;
-            text-align: center;
-            margin-right:10px;
-        }
-        
-        
+  margin: 70px 0;
+  max-width: 100%;
+  min-width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  #aboutMeDiv {
+    flex: 1;
+    max-width: 1000px;
+
+    #subHeading {
+      text-align: center;
+      text-decoration: underline;
+      margin-right: 50px;
+    }
+
+    #aboutMeText {
+      box-sizing: content-box;
+      max-width: 100%;
+      min-width: 175px;
+      text-align: center;
+      margin-right: 10px;
+    }
+  }
+
+  #skillsDiv {
+
+    #skillsSubheading {
+        text-decoration: underline;
+        text-align: center;
+        margin-right: 50px;
     }
     
-    #aboutMeImg {
-        flex: 1;
-        max-width: 100%;
-        max-height: 850px;
-    }
 }
 
+  #aboutMeImg {
+    flex: 0 0 auto;
+    max-width: 484px;
+    max-height: 850px;
+    margin-right: 10px;
+  }
+}
 
-.projectContianer {
-    
-    .projImg{
-        margin-top: 10px;
-    }
-    
-    .projDesc{
-        margin-top: 5px;
-        margin-left: 50px;
+#projectContianer {
+  max-width: 1150px;
+  align-items: center;
+
+  .projectRow {
+    align-content: center;
+
+    .projImg {
+      margin-top: 10px;
     }
 
+    .projDesc {
+      margin-top: 5px;
+      margin-left: 50px;
+    }
+  }
 }
