--- a/src/styles/Nav.module.scss
+++ b/src/styles/Nav.module.scss
@@ -11,6 +11,7 @@ header{
 }
 
 nav{
+    max-height: 556px;
     display: flex;
     align-items: center;
     justify-content: space-between;
